# Studio-paper

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml
buying_lite/: README.md  __init__.py  buying.py  calendar.py  plots.py  synth.py
buying_lite/tests/: conftest.py  test_buying_lite.py
examples/: replicate_paper_figures.py  showcase.py  synth.py  usage_template.py
notebooks/: Untitled.ipynb  pen_validation.ipynb  studio_parfitt.ipynb  test_parfitt.ipynb
parfitt_trb/: README.md  __init__.py  aggregation.py  cohorts.py  config.py  core.py  display.py  local_spark.py  model.py  periods.py  plots.py
parfitt_trb/aggregation/: __init__.py  _expr.py  aggregator.py  calendar.py
penetration_lite/: README.md  __init__.py  calendar.py  penetration.py  plots.py  synth.py
penetration_lite/tests/: conftest.py  test_lite.py
rbr_lite/: README.md  __init__.py  calendar.py  plots.py  rbr.py  synth.py
rbr_lite/tests/: conftest.py  test_lite.py
tests/: conftest.py  helpers.py  test_backends.py  test_calendar_axis.py  test_core_units.py  test_pipeline.py  test_promo_validation.py
theory/Parfitt/: Parfitt-Collins Model.md  Ste_trb_model.py
