[project]
name = "studio-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyspark>=4.1.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.6.0",
    "markitdown>=0.1.6",
    "pytest>=9.1.0",
    "ruff>=0.15.18",
]
